gigwalk-html/css/core.css
/* ... */
.group .sub .selected-item,
.instruction .sub .selected-item,
.description .value,
.plainLabel,
.instruction .header .actions .ti,
.section.title {
	line-height: 1.2em;
}

label {
	font-weight: normal;
}

.center,
.expander,
.instruction .dragger,
.time-estimate input[type="text"],
.instruction.view-mode input.datepicker,
.instruction.view-mode .numeric input,
.instruction.view-mode .time input {
	text-align: center;
}

nav li a,
nav li a:hover,
nav li a:focus,
nav li a:visited,
a.navly,
.remove,
.iconly,
a.iconly,
a.iconly:hover,
a.iconly:focus,
.dropdown-menu .link,
a.buttonly,
.icon-buttons a {
	text-decoration: none;
}

.primary.actions a.linkly,
.dropdown-menu .link:hover,
a.iconly span:hover,
a.iconly span:focus {
	text-decoration: underline;
}

.tabnav li .dropdown li a {
	white-space: normal;
}

header .user-name,
header .user-org,
.tabnav .dropdownly .dropdown-toggle {
	text-overflow: ellipsis;
	white-space: nowrap;
  overflow: hidden;
}

.hellomouse,
.editable:hover, 
.header .controls .ti,
.header .dragger,
.header .arrow,
select:hover,
select:focus,
.nav-active-holder {
	cursor: pointer;
}

.defaultmouse,
a.disabled,
.tabnav li.active a {
	cursor: default;
}

.clearfix:after,
.section.title:after,
.group:after,
.repeats-selection:after,
.sidenav .user-info:after,
.repeats.group:before,
.sidenav ul.nav-sections:before,
.group .sub:after,
.instruction .item .sub:after,
.group.additional .sub .checker:after,
.header .actions:after,
.item .sub.more-info:after,
.primary.actions:after,
.subnav:after,
.set-repeats .ends:after,
.group.materials .mini-panel .wrapper:after,
.instruction-footer:after,
.instruction.view-mode .inner:after,
.instruction.view-mode .type:after,
.instruction.view-mode .target:after,
.instruction.view-mode .target .answers:after,
.instruction.view-mode .target .answer:after,
.instruction.view-mode .ti:after,
.instruction.edit-mode .instruction-content .numeric .more-info:before,
.instruction.edit-mode .numeric .between:before,
.instruction .primary.actions .right:after,
.instruction .header .icon-edit:after,
.instruction .header .viewing.icon-buttons:after {
	 content: ' ';
	 visibility: hidden;
	 display: block;
	 font-size: 0;
	 clear: both;
	 height: 0;
}

nav .nav-sections,
nav.tabnav ul,
nav.subnav ul {
	padding-left: 0;
	list-style: none;
}

.tabnav .dropdown.open ul.dropdown-menu,
.tabnav li .dropdown li,
.tabnav li .dropdown li a,
.instruction.edit-mode .instruction-content .numeric .more-info .plainLabel,
.instruction .item.targets .sub .mini-panel.targets label {
	display: block;
}

.navbar-brand,
header nav .number,
.tabnav li a,
.subnav li a,
a.buttonly,
select,
.custom-select,
.caret,
.set-repeats .dropdown,
.set-repeats .mini-panel,
.instruction-footer .icon-checkmark,
.instruction-footer .item.count .described,
.time-estimate .dropdown,
a.iconly {
	display: inline-block;
}

.inline-left,
.subnav li,
.adjacent .wrapper,
.instructions .header .ti,
.set-repeats .radios,
.group.materials .ti.number,
.instruction-footer .item,
.instruction.view-mode .target .name,
.instruction.view-mode .target .answer,
.instruction.edit-mode .numeric .ti,
.instruction.edit-mode .numeric .dropdown {
	display: inline-block;
	float: left;
}

.inline-right,
.icon-buttons,
.instruction.view-mode .target .answers,
.instruction.view-mode .time .dropdown {
	display: inline-block;
	float: right;
}

.navbar-toggle,
nav .user-info,
nav .user-image,
nav .user-info .inner,
header .navbar .dropdown-toggle,
input[type="radio"],
.section.title .navly,
.section.title .ti,
.date.group,
.date.group div,
.group .plainLabel,
.instruction-content .plainLabel,
.group .value,
.sub .selected-item,
.primary.actions a.delete {
	float: left;
}

.right,
.tabnav li.right,
.btn.btn-default.dropdown-toggle .caret,
.remove,
.instruction.view-mode .type {
	float: right;
}

.tabnav li .dropdown li,
.group.repeats .every .dropdown .plainLabel,
.group.repeats .set-repeats .radios .plainLabel,
.instruction.edit-mode .instruction-content .numeric .more-info > .plainLabel {
	float: none;
}

.custom-select,
header nav li a,
header nav li a.imaqED,
.tabnav li.buttonly,
.tabnav li.buttonly a,
.date.group,
.date.group div,
.date.group input,
.editable,
.editable:after,
.date.group:after,
.description .value,
.checker,
input[type="checkbox"],
.expander,
.im,
.header .controls,
.header .actions,
.header .actions .icon-buttons .im,
.instructions .primary.actions,
.instructions .primary.actions:before,
.icon-buttons,
.set-repeats .ends,
.instruction-footer .item,
.instruction-footer .descriptor,
.instruction-footer .item.count .described,
.icon-buttons a:before,
.item.required > .plainLabel:after,
.instruction.view-mode .answer,
.instruction.view-mode .answer input,
.instruction.view-mode .answer.exception .plainLabel,
.instruction.view-mode .answer.exception .plainLabel:after,
input[type="radio"],
input[type="radio"]:after,
.instruction.view-mode .time .dropdown,
.instruction.view-mode .time .btn.btn-default.dropdown-toggle,
.tabnav .btn.btn-default.dropdown-toggle,
a.iconly,
a.iconly:before,
.btn.btn-default.dropdown-toggle,
.btn.btn-default.dropdown-toggle .caret:before {
	position: relative;
}

.header .controls .ti,
.header .controls .arrow,
header nav .number,
.tabnav li.buttonly a span.im,
.btn.btn-default.dropdown-toggle .caret {
	position: absolute;
}

header .navbar-collapse.in {
	overflow-y: visible;
}

.sidenav .user-info,
.header .dragger,
.subnav ul,
.instruction.edit-mode .instruction-content .numeric .more-info .plainLabel {
	width: 100%;
}
/* ... */

